package edu.austral.dissis.common.model;

public interface PieceKind {
    String pieceId ();
}
