@startuml checkers-class-diagram
!pragma layout smetana
skinparam classAttributeIconSize 0

interface GameEngine {
  +executeMove(move, state): MoveResult
}
interface TurnManager {
  +nextPlayer(color, state): Color
}
interface WinCondition {
  +evaluate(state): GameStatus
}
interface MoveBehaviour {
  +isValidMove(move, piece, state): boolean
}
interface PieceKind {
  +pieceId(): String
}
interface GameExtraState {
  +update(move, state): GameExtraState
}

class Game {
  +executeMove(move): GameResult
  +undo(): Game
  +redo(): Game
}
class GameState {
  +board: Board
  +currentPlayer: Color
  +status: GameStatus
  +extraState: GameExtraState
}
class Board {
  +pieces: Map<Position, Piece>
}
class Piece {
  +color: Color
  +type: PieceKind
  +moveBehaviour: MoveBehaviour
}

package "checkers/model/pieces" {
  class Man implements PieceKind
  class King implements PieceKind
}

class MultiCaptureExtraState implements GameExtraState {
  +lastCapturingPiece: Optional<Position>
}

class CheckersPieceFactory {
  +man(color): Piece
  +king(color): Piece
}
class CheckersWinCondition implements WinCondition
class CheckersTurnManager implements TurnManager
class ManMoveBehaviour implements MoveBehaviour
class KingMoveBehaviour implements MoveBehaviour
class GameEngineImpl implements GameEngine {
  -moveValidator: MoveValidator
  -winCondition: WinCondition
  -turnManager: TurnManager
  -boardUpdater: BoardUpdater
}
class CheckersGameFactory {
  +createStandardGame(): Game
  +createFromBoard(board, player): Game
}

Game --> GameEngine
Game --> GameState
GameState --> Board
GameState --> GameExtraState
Board --> Piece
Piece --> PieceKind
Piece --> MoveBehaviour
GameEngineImpl --> TurnManager
GameEngineImpl --> WinCondition
CheckersGameFactory ..> Game : creates
CheckersPieceFactory ..> Piece : creates

@enduml